# plasmastorm

./: Makefile.am  Makefile.in  README.md  aclocal.m4  addCopyright.sh  bootdate  bootstrap  config.h.in  configure  configure.ac  getVersion.sh
afterburner/: Makefile.am  Makefile.in
data/: Makefile.am  Makefile.in  plasmastorm.appdata.xml.in  plasmastorm.desktop.in
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  cs.po  da.po  el.po  es.po  et.po  fr.po  hu.po  is.po  lt.po  lv.po  no.po  pl.po  plasmastorm.pot  ro.po  sv.po
pofiles/: de.po  en.po  fi.po  it.po  nl.po  pt.po  ru.po  uk.po
src/: Application.c  Application.h  Blowoff.c  Blowoff.h  ClockHelper.c  ClockHelper.h  ColorCodes.h  ColorPicker.cpp  ColorPicker.h  Fallen.c  Fallen.h  MainWindow.c  MainWindow.h  Makefile.am  Makefile.in  MsgBox.cpp  MsgBox.h  Prefs.c  Prefs.h  Stars.c  Stars.h  Storm.c  Storm.h  StormWindow.c  StormWindow.h  Wind.c  Wind.h  Windows.c  Windows.h  XDOSearch.c  XDOSearch.h  XDOSymbolMap.h  XDOVersion.h  generateGladeIncludes.sh  generateShapeIncludes.sh  generatedShapeIncludes.h  gettext.h  hashTableHelper.cpp  hashTableHelper.h  loadmeasure.c  (+27 more)
src/.deps/: libxdo_a-xdo_search.Po  plasmastorm-docs.Po  plasmastorm-ixpm.Po  plasmastorm-main.Po  plasmastorm-wmctrl.Po
src/Pixmaps/: Makefile.am  Makefile.in  StormShape0.xpm  StormShape1.xpm  StormShape2.xpm  StormShape3.xpm  StormShape4.xpm  StormShape5.xpm  StormShape6.xpm  generatedPixmapIncludes.sh  generatedShellCmd.sh  plasmastorm.xpm
